<resources>
    <string name="app_name">DemoADKLocalDataStorage</string>
    <string name="action_settings">Settings</string>
    <string name="btn_setprefs">Set preferences</string>
    <string name="btn_showprefs">Show preferences</string>
    <string name="label_username">User name:</string>
    <string name="label_viewimages">View images</string>
    <string name="title_activity_internal_file">InternalFileActivity</string>
    <string name="btn_createfile">Create File</string>
    <string name="btn_readfile">Read File</string>
    <string name="menu_all">All</string>
    <string name="menu_cheap">Cheap</string>
    <string name="menu_fancy">Fancy</string>
    <string name="title_activity_parcelable_interface">ParcelableInterfaceActivity</string>
    <string name="title_activity_tour_detail_join">TourDetailJoinActivity</string>
    <string name="add_tour">Add new Tour</string>
    <string name="menu_mytours">My Tours</string>
    <string name="delete_tour">Delete </string>
</resources>
