<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-app">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_all"
        android:orderInCategory="100"
        android:title="@string/menu_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_cheap"
        android:orderInCategory="100"
        android:title="@string/menu_cheap"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_fancy"
        android:orderInCategory="100"
        android:title="@string/menu_fancy"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mytours"
        android:orderInCategory="100"
        android:title="@string/menu_mytours"
        app:showAsAction="always" />

</menu>
